bk_ida/gccida/g1/dw2_asm_output_nstring
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dw2_asm_output_nstring/src/dwarf2asm.c:736:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v10] & 0x10) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dw2_asm_output_nstring/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dw2_asm_output_nstring/src/dwarf2asm.c:777:7: error: use of undeclared identifier 'byte_6551A0'
v15 = byte_6551A0[*( unsigned __int8 *)v3]; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dw2_asm_output_nstring/src/dwarf2asm.c:811:7: error: use of undeclared identifier 'byte_6551A0'
v14 = byte_6551A0[( unsigned int)j]; 
      ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dw2_asm_output_nstring/src/obj/dwarf2asm.o] Error 1
